--- a/50sueñosdealbert.html
+++ b/50sueñosdealbert.html
@@ -4,29 +4,86 @@
 <meta charset="UTF-8">
 <title>50sueñosdealbert</title>
 <style>
-body{
-background-color:yellow;
+
+
+.center {
+	text-align: center;
+	 text-decoration:none; 
+	 color: black;
+	 font-size: 20px;
+	
 }
-h1.primero {
-text-align:center;
-color:blue;
+
+.fotos {
+  margin: 0;
+  padding: 0;
 }
-p.segundo {
-text-align:center;
+ 
+.sue {
+	text-align: center;
 }
-h1.primero {
-text-decoration:underline;
+ 
+.fotos {
+  width: 900px;
+  margin: 0 auto;
+  overflow: auto;
 }
+ 
+.fotos {
+  list-style-type: none;
+}
+ 
+li img {
+  float: left;
+  margin: 10px;
+  border: 20px solid #fff;
+ 
+  -webkit-transition: box-shadow 0.5s ease;
+  -moz-transition: box-shadow 0.5s ease;
+  -o-transition: box-shadow 0.5s ease;
+  -ms-transition: box-shadow 0.5s ease;
+  transition: box-shadow 0.5s ease;
+}
+ 
+li img:hover {
+  -webkit-box-shadow: 0px 0px 7px rgba(255,255,255,0.9);
+  box-shadow: 0px 0px 7px rgba(255,255,255,0.9);
+}
+
+.dream {
+	width: center;
+}
+
 
 </style>
 </head>
 <body>
-<h1 class="primero">¿Te gustan los sueños?</h1>
-<p class="segundo">Pues este es tu sitio! Quedate y lee los sueños que tiene la demas gente , o si no tambien... </p>
-<h1 class="primero">¡Enviame tu sueño!</h1>
-<p class="segundo"> Correo con sueño anonimo : a50sueñosdealbert@gmail.com</p>
-<p class="segundo">Correo con sueño pero sin anonimo : 50sueñosdealbert@gmail.com</p>
+<ul class="center">
+	<a class="center" href="#">Primera</a>	|
+	<a class="center"  href="#">Segunda</a>	|
+	<a class="center" href="#">Tercera</a>	|
+
+</ul>
+
+<h1 class="sue"> Tus Sueños</h1>
+
+<div class="fotos">
+  <ul class="fotos">
+    <li><a class="fotos" href="#"><img src="http://placehold.it/150x150"></a></li>
+    <li><a class="fotos" href="#"><img src="http://placehold.it/150x150"></a></li>
+    <li><a class="fotos" href="#"><img src="http://placehold.it/150x150"></a></li>
+    <li><a class="fotos" href="#"><img src="http://placehold.it/150x150"></a></li>
+    <li><a class="fotos" href="#"><img src="http://placehold.it/150x150"></a></li>
+    <li><a class="fotos" href="#"><img src="http://placehold.it/150x150"></a></li>
+    <li><a class="fotos" href="#"><img src="http://placehold.it/150x150"></a></li>
+    <li><a class="fotos" href="#"><img src="http://placehold.it/150x150"></a></li>
+    
+  </ul>
+</div >
+</div>
+
+
 </body>
 
 </html>
-# primera-web-AlbertArgudoCortes
+
