Updated file by sergi

--- a/50sueñosdealbert.html
+++ b/50sueñosdealbert.html
@@ -21,7 +21,7 @@ text-decoration:underline;
 </style>
 </head>
 <body>
-<h1 class="primero">¿Te gustan los sueños?</h1>
+<h1 class="primero">¿Te gustan los sueños? NO!</h1>
 <p class="segundo">Pues este es tu sitio! Quedate y lee los sueños que tiene la demas gente , o si no tambien... </p>
 <h1 class="primero">¡Enviame tu sueño!</h1>
 <p class="segundo"> Correo con sueño anonimo : a50sueñosdealbert@gmail.com</p>
